# wife_experimental

./: .gitignore  move_and_response.py  pyproject.toml  with_langchain_ollama.py  with_pydantic_ollama.py
1_review_framework/: with_ag2_ollama.py  with_langchain_ollama copy.py  with_langchain_ollama.py  with_langchain_ollama_pydantic_parser.py  with_pydantic_ollama.py  z_sample_langchain.py  z_test.py
