[project]
name = "wife-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.2.2",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "pydantic-ai[logfire]>=0.0.14",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
