[project]
name = "wife-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-core>=0.4.2",
    "autogen>=0.7.1",
    "langchain-community>=0.3.14",
    "langchain-ollama>=0.2.2",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "openlit>=1.33.4",
    "pydantic-ai[logfire]>=0.0.18",
    "python-dotenv>=1.0.1",
    "traceloop-sdk>=0.33.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
